--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@astrojs/react": "^3.6.3",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.3",
     "astro": "^4.16.16",
     "leaflet": "^1.9.4",
+    "my-astro-app": "file:",
     "react": "^18.3.1",
     "typescript": "^5.7.2"
   },
@@ -25,6 +27,9 @@
     "@types/leaflet": "^1.9.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "wrangler": "^3.91.0"
   }
 }
