--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "local": "astro dev --host 192.168.10.181"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
