--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^4.16.16",
+    "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "my-astro-app": "file:",
     "react": "^18.3.1",
