--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^4.16.16",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
